# zephir

./: .dockerignore  CMakeLists.txt  Cargo.toml  Dockerfile  conanfile.txt  main.cpp
.github/workflows/: main.yml
libzephir/: AllowedResult.hpp  Cargo.toml  Effect.hpp  EmptyPolicy.hpp  MatchResult.cpp  MatchResult.hpp  PartialPolicy.hpp  Policy.cpp  Policy.hpp  stdafx.h
libzephir/cache/: LruCache.hpp
libzephir/compiler/: CompiledPolicy.h  CompiledPolicy.hpp  Compiler.cpp  Compiler.h  Compiler.hpp
libzephir/exception/: ActionsCannotBeEmptyException.h  ActionsCannotBeEmptyException.hpp  UnknownPolicyVersionException.h  UnknownPolicyVersionException.hpp  UnsupportedStorageDsn.hpp  exceptions.h
libzephir/identity/: Group.hpp  Identity.hpp  Role.hpp  Subject.hpp
libzephir/lock/: Guard.hpp
libzephir/src/: cache.rs  lib.rs
libzephir/src/compiler/: compiled_policy.rs  compiler.rs  mod.rs
libzephir/src/err/: mod.rs
libzephir/src/identity/: group.rs  identity.rs  mod.rs  role.rs  subject.rs
libzephir/src/policy/: allowed_result.rs  match_result.rs  mod.rs  policy.rs  policy_set.rs
libzephir/src/policy/condition/: binary_compare.rs  bool_compare.rs  date_compare.rs  flags.rs  ip_compare.rs  mod.rs  numeric_compare.rs  script.rs  string_equals.rs  string_not_equals.rs
libzephir/src/storage/: group_manager.rs  identity_manager.rs  mod.rs  policy_manager.rs  types.rs
libzephir/src/utils/: glob_to_regex.rs  mod.rs  string_utils.rs
libzephir/storage/: Manager.cpp  Manager.hpp
libzephir/storage/exception/: InvalidDsnException.h  InvalidDsnException.hpp
libzephir/storage/sql/postgres/: PostgresManager.cpp  PostgresManager.hpp  tables.hpp
libzephir/storage/sql/postgres/schema/: schema.sql
libzephir/storage/sql/postgres/tables/: group.h  group_identity.h  group_policy.h  identity.h  identity_policy.h  policy.h
libzephir/util/: apply.h  apply.hpp  util.cpp  util.h  util.hpp
server/: Server.hpp  json-reader.cpp  json-reader.hpp  stdafx.hpp
server/actions/: allowed.cpp  decodePolicy.cpp  upsertIdentity.cpp  upsertPolicies.cpp  upsertPolicy.cpp  util.hpp
server/actions/groups/: addGroupMember.cpp  register-actions.cpp  removeGroupMember.cpp  upsertGroup.cpp
server/schemas/: addGroupMember.json.cpp  allowed.json.cpp  schemas.cpp  schemas.hpp  upsert_group.json.cpp  upsert_identity.json.cpp  upsert_policy.json.cpp
tests/: CMakeLists.txt
tests/libzephir/: AllowedResultTests.cpp  PolicyTests.cpp
tests/libzephir/identity/: GroupTests.cpp  IdentityTests.cpp  RoleTests.cpp  SubjectTests.cpp
zephir/: Cargo.toml
zephir/src/: main.rs
zephir/src/err/: mod.rs
zephir/src/handlers/: allowed.rs  group.rs  identity.rs  mod.rs  policy.rs  status.rs
