[package]
name = "libzephir"
version = "0.1.0"
authors = ["Alessandro Chitolina <alekitto@gmail.com>"]
edition = "2018"

[dependencies]
log = "0.4"
mouscache = "0.5"
num-traits = "0.2"
pcre2 = "0.2"
redis = "0.10"
serde_json = "1.0"

[dependencies.sqlx]
version = "0.5.1"
features = [ "all-databases", "macros", "json", "offline", "runtime-async-std-native-tls" ]
