[package]
name = "zephir"
version = "0.1.0"
authors = ["Alessandro Chitolina <alekitto@gmail.com>"]
edition = "2021"

[dependencies]
actix-web = "3"
actix-web-validator = "2.0"
derive_more = "0.99"
env_logger = "0.8"
lazy_static = "1.4"
libzephir = { path = "../libzephir" }
log = "0.4"
mouscache = "0.5"
regex = "1"
serde = "1.0"
serde_json = "1.0"
validator = { version = ">=0.11, <=0.12", features = ["derive"] }

[dependencies.sqlx]
version = "0.5.1"
features = [ "all-databases", "macros", "json", "offline", "runtime-async-std-native-tls" ]
